--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "hbs": "^4.1.1",
-    "request": "^2.88.2"
+    "needle": "^2.4.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.3"
