--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "hbs": "^4.1.1",
-    "needle": "^2.4.1"
+    "needle": "^2.4.1",
+    "rss-parser": "^3.7.6"
   },
   "devDependencies": {
     "nodemon": "^2.0.3"
